...
  };

  return (
    <View style={styles.container} testID="ConnectionLevelSliderPopup">
      <View style={styles.label}>
        <Text
          testID="ConnectionLevelSliderText"
          style={[
            styles.labelText,
            { color: connectionLevelColors[currentLevel] },
          ]}
        >
          {connectionLevelStrings[currentLevel]}
...
          <Text style={styles.descriptionText}>
            "{trustLevelDetails[currentLevel].description}"
          </Text>
        </View>
      )}
      <Slider
        testID="ConnectionLevelSlider"
        style={styles.slider}
        value={initialValue}
        minimumValue={minValue}
        maximumValue={maxValue}
        step={1}
        minimumTrackTintColor={
...
