...
  },
  [report_reasons.OTHER]: {
    description: i18next.t('connectionDetails.text.reportOther'),
  },
};

const ReportReasonModal = ({ route, navigation }: props) => {
  const { connectionId, successCallback } = route.params;
  const { t } = useTranslation();
  const connection: connection = useSelector((state: State) =>
    connectionByIdSelector(state, connectionId),
  );
  const dispatch = useDispatch();
...
          {Object.keys(reasonStrings).map((reason) =>
            renderReasonButton(reason),
          )}
        </View>
        <View style={styles.modalButtons}>
          <TouchableOpacity
            testID="SubmitReportBtn"
            style={[styles.modalButton, styles.submitButton]}
            onPress={confirmReport}
            disabled={!reason}
          >
            <Text
              style={
...
